[workspace]
resolver = "2"
members = [
    "iceoryx2-bb/lock-free/",
    "iceoryx2-bb/threadsafe/",
    "iceoryx2-bb/container",
    "iceoryx2-bb/derive-macros",
    "iceoryx2-bb/elementary",
    "iceoryx2-bb/elementary-traits",
    "iceoryx2-bb/log",
    "iceoryx2-bb/memory",
    "iceoryx2-bb/posix",
    "iceoryx2-bb/system-types",
    "iceoryx2-bb/testing",
    "iceoryx2-bb/trait-tests",

    "iceoryx2-ffi/c",
    "iceoryx2-ffi/python",
    "iceoryx2-ffi/ffi-macros",

    "iceoryx2-cal",
    "iceoryx2",
    "iceoryx2-pal/concurrency-sync",
    "iceoryx2-pal/posix/",
    "iceoryx2-pal/configuration/",
    "iceoryx2-pal/testing/",
    "iceoryx2-pal/os-api",

    "iceoryx2-services/discovery",

    "iceoryx2-tunnels/end-to-end-tests",
    "iceoryx2-tunnels/zenoh",

    "iceoryx2-userland/record-and-replay",

    "iceoryx2-cli",

    "examples",

    "benchmarks/request-response",
    "benchmarks/publish-subscribe",
    "benchmarks/event",
    "benchmarks/queue"
]

[workspace.package]
categories = ["network-programming"]
description = "iceoryx2: Lock-Free Zero-Copy Interprocess Communication"
edition = "2021"
homepage = "https://iceoryx.io"
keywords = [
    "zero-copy",
    "communication",
    "ipc",
    "publish-subscribe",
    "request-response",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-iceoryx/iceoryx2"
rust-version = "1.81"
version = "0.7.0"

[workspace.dependencies]
iceoryx2-bb-threadsafe = { version = "0.7.0", path = "iceoryx2-bb/threadsafe/" }
iceoryx2-bb-lock-free = { version = "0.7.0", path = "iceoryx2-bb/lock-free/" }
iceoryx2-bb-container = { version = "0.7.0", path = "iceoryx2-bb/container/" }
iceoryx2-bb-derive-macros = { version = "0.7.0", path = "iceoryx2-bb/derive-macros/" }
iceoryx2-bb-elementary = { version = "0.7.0", path = "iceoryx2-bb/elementary/" }
iceoryx2-bb-elementary-traits = { version = "0.7.0", path = "iceoryx2-bb/elementary-traits/" }
iceoryx2-bb-log = { version = "0.7.0", path = "iceoryx2-bb/log/" }
iceoryx2-bb-memory = { version = "0.7.0", path = "iceoryx2-bb/memory/" }
iceoryx2-bb-posix = { version = "0.7.0", path = "iceoryx2-bb/posix/" }
iceoryx2-bb-system-types = { version = "0.7.0", path = "iceoryx2-bb/system-types/" }
iceoryx2-bb-trait-tests = { version = "0.7.0", path = "iceoryx2-bb/trait-tests/" }
iceoryx2-bb-testing = { version = "0.7.0", path = "iceoryx2-bb/testing/" }
iceoryx2-pal-concurrency-sync = { version = "0.7.0", path = "iceoryx2-pal/concurrency-sync/" }
iceoryx2-pal-posix = { version = "0.7.0", path = "iceoryx2-pal/posix/" }
iceoryx2-pal-os-api = { version = "0.7.0", path = "iceoryx2-pal/os-api/" }
iceoryx2-pal-configuration = { version = "0.7.0", path = "iceoryx2-pal/configuration/" }
iceoryx2-pal-testing = { version = "0.7.0", path = "iceoryx2-pal/testing/" }
iceoryx2-cal = { version = "0.7.0", path = "iceoryx2-cal" }
iceoryx2 = { version = "0.7.0", path = "iceoryx2/" }
iceoryx2-cli = { version = "0.7.0", path = "iceoryx2_cli/"}
iceoryx2-ffi-c = { version = "0.7.0", path = "iceoryx2-ffi/c" }
iceoryx2-ffi-python = { version = "0.7.0", path = "iceoryx2-ffi/python" }
iceoryx2-ffi-macros = { version = "0.7.0", path = "iceoryx2-ffi/ffi-macros" }
iceoryx2-services-discovery = { version = "0.7.0", path = "iceoryx2-services/discovery"}
iceoryx2-tunnels-end-to-end-tests = { version = "0.7.0", path = "iceoryx2-tunnels/end-to-end-tests" }
iceoryx2-tunnels-zenoh = { version = "0.7.0", path = "iceoryx2-tunnels/zenoh" }
iceoryx2-userland-record-and-replay = { version = "0.7.0", path = "iceoryx2-userland/record-and-replay" }

anyhow = { version = "1.0.86" }
bindgen = { version = "0.72.0" }
cargo_metadata = { version = "0.18.1" }
cbindgen = { version = "0.27.0" }
cc = { version = "1.0.98" }
cdr = { version = "0.2.4" }
clap = { version = "4.5.4", features = ["derive"] }
enum-iterator = { version = "2.1.0" }
better-panic = { version = "0.3.0" }
colored = { version = "2.1" }
generic-tests = { version = "0.1.2" }
human-panic = { version = "2.0.2" }
lazy_static = { version = "1.4.0" }
libc = { version = "0.2.169" }
log = { version = "0.4.21" }
once_cell = { version = "1.19.0" }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
proc-macro2 = { version = "1.0.84" }
quote = { version = "1.0.36" }
ron = { version = "0.8" }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
serde_json = { version = "1.0" }
serde_test = { version = "1.0.176" }
sha1_smol = { version = "1.0.0" }
syn = { version = "2.0.66", features = ["full"] }
tempfile = { version = "3.12.0" }
thiserror = { version = "1.0.56" }
tiny-fn = { version = "0.1.6" }
toml = { version = "0.8.13" }
tracing = { version = "0.1.40" }
dirs = { version = "5.0" }
dialoguer = { version = "0.8.0" }
windows-sys = { version = "0.48.0", features = [
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_Networking_WinSock",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
] }
zenoh = { version = "1.3.4", features = ["default", "unstable"] }

[profile.release]
strip = true
lto = true
# opt-level = "z"
panic = "abort"
