# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

workspace(name = "org_eclipse_iceoryx_iceoryx2")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")

http_archive(
    name = "rules_foreign_cc",
    sha256 = "4b33d62cf109bcccf286b30ed7121129cc34cf4f4ed9d8a11f38d9108f40ba74",
    strip_prefix = "rules_foreign_cc-0.11.1",
    url = "https://github.com/bazelbuild/rules_foreign_cc/releases/download/0.11.1/rules_foreign_cc-0.11.1.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# This sets up some common toolchains for building targets. For more details, please see
# https://bazelbuild.github.io/rules_foreign_cc/0.11.1/flatten.html#rules_foreign_cc_dependencies
rules_foreign_cc_dependencies()

# Setup gtest
GOOGLETEST_VERSION = "1.14.0"
maybe(
    name = "googletest",
    repo_rule = http_archive,
    urls = ["https://github.com/google/googletest/archive/refs/tags/v{version}.zip".format(version = GOOGLETEST_VERSION)],
    sha256 = "1f357c27ca988c3f7c6b4bf68a9395005ac6761f034046e9dde0896e3aba00e4",
    strip_prefix = "googletest-{version}".format(version = GOOGLETEST_VERSION),
)

# TODO use http_archive once iceoyx v3.0 is release

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

git_repository(
    name = "iceoryx_platform",
    strip_prefix = "iceoryx_platform",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/eclipse-iceoryx/iceoryx.git",
    tag = "v2.95.0",
)

git_repository(
    name = "iceoryx_hoofs",
    strip_prefix = "iceoryx_hoofs",
    build_file_content = _ALL_CONTENT,
    remote = "https://github.com/eclipse-iceoryx/iceoryx.git",
    tag = "v2.95.0",
)
