[package]
name = "example"
description = "iceoryx2: examples"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
iceoryx2 = { workspace = true }
iceoryx2-bb-container = { workspace = true }

[lib]
name = "examples_common"
path = "rust/_examples_common/lib.rs"

# complex data types

[[example]]
name = "complex_data_types"
path = "rust/complex_data_types/complex_data_types.rs"

# discovery

[[example]]
name = "discovery"
path = "rust/discovery/discovery.rs"

# event

[[example]]
name = "event_listener"
path = "rust/event/listener.rs"

[[example]]
name = "event_notifier"
path = "rust/event/notifier.rs"

# publish_subscribe

[[example]]
name = "publish_subscribe_publisher"
path = "rust/publish_subscribe/publisher.rs"

[[example]]
name = "publish_subscribe_subscriber"
path = "rust/publish_subscribe/subscriber.rs"

# publish_subscribe_dynamic_data

[[example]]
name = "publish_subscribe_dyn_publisher"
path = "rust/publish_subscribe_dynamic_data/publisher.rs"

[[example]]
name = "publish_subscribe_dyn_subscriber"
path = "rust/publish_subscribe_dynamic_data/subscriber.rs"

# publish_subscribe_with_user_header

[[example]]
name = "publish_subscribe_user_header_publisher"
path = "rust/publish_subscribe_with_user_header/publisher.rs"

[[example]]
name = "publish_subscribe_user_header_subscriber"
path = "rust/publish_subscribe_with_user_header/subscriber.rs"

# service attributes

[[example]]
name = "service_attributes_creator"
path = "rust/service_attributes/creator.rs"

[[example]]
name = "service_attributes_opener"
path = "rust/service_attributes/opener.rs"

[[example]]
name = "service_attributes_incompatible"
path = "rust/service_attributes/incompatible.rs"
