# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache Software License 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0, or the MIT license
# which is available at https://opensource.org/licenses/MIT.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

alias(
    name = "iceoryx2-c-shared",
    actual = "//iceoryx2-ffi/c:iceoryx2-ffi-c-shared",
)

alias(
    name = "iceoryx2-c-static",
    actual = "//iceoryx2-ffi/c:iceoryx2-ffi-c-static",
)
